--- a/ui/html/pages/view.tmpl
+++ b/ui/html/pages/view.tmpl
@@ -1,4 +1,5 @@
 {{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
+
 {{define "main"}}
     {{ with .Snippet}}
     <div class='snippet'>
@@ -8,8 +9,8 @@
         </div>
         <pre><code>{{.Content}}</code></pre> 
         <div class='metadata'>
-            <time>Created: {{.Created}}</time>
-            <time>Expires: {{.Expires}}</time> 
+            <time>Created: {{humanDate .Created}}</time>
+            <time>Expires: {{humanDate .Expires}}</time> 
         </div>
     </div>
     {{end}}
